--- a/Reservation/Views/Home/Index.cshtml
+++ b/Reservation/Views/Home/Index.cshtml
@@ -350,47 +350,49 @@
             <br>
             <br>
 
-            <div class="col-sm-4">
-                <div class="speaker">
-                    <div class="photo-wrapper rounded"><img src="assets/img/speakers/speaker1.jpg" alt="John Doe" class="img-responsive"></div>
-                    <h3 class="name">ERIC BOLDY</h3>
-                    <p class="text-alt"><small>Project Manager</small></p>
-                    <p class="about">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                    <ul class="speaker-socials">
-                        <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                        <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                        <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
-                    </ul>
-                </div>
-            </div>
+            <!--<div class="col-sm-4">
+        <div class="speaker">
+            <div class="photo-wrapper rounded"><img src="assets/img/speakers/speaker1.jpg" alt="John Doe" class="img-responsive"></div>
+            <h3 class="name">ERIC BOLDY</h3>
+            <p class="text-alt"><small>ct Manager</small></p>
+            <p class="about">asasasasasas</p>
+            <ul class="speaker-socials">
+                <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
+            </ul>
+        </div>
+    </div>
 
-            <div class="col-sm-4">
-                <div class="speaker">
-                    <div class="photo-wrapper rounded"><img src="assets/img/speakers/speaker2.jpg" alt="John Doe" class="img-responsive"></div>
-                    <h3 class="name">سخنران</h3>
-                    <p class="text-alt"><small>VP Product  Flopbox</small></p>
-                    <p class="about">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                    <ul class="speaker-socials">
-                        <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                        <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                        <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
-                    </ul>
-                </div>
-            </div>
+    <div class="col-sm-4">
+        <div class="speaker">
+            <div class="photo-wrapper rounded"><img src="assets/img/speakers/speaker2.jpg" alt="John Doe" class="img-responsive"></div>
+            <h3 class="name">سخنران</h3>
+            <p class="text-alt"><small>VP Product  Flopbox</small></p>
+            <p class="about">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+            <ul class="speaker-socials">
+                <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
+            </ul>
+        </div>
+    </div>-->
 
-            <div class="col-sm-4">
-                <div class="speaker">
-                    <div class="photo-wrapper rounded"><img src="assets/img/speakers/speaker3.jpg" alt="دکتر کامران صحت" class="img-responsive"></div>
-                    <h3 class="name">دکتر کامران صحت</h3>
-                    <p class="text-alt"><small>مدرس و مشاور برترین برندهای داخلی و بین المللی</small></p>
-                    <p class="about">دکتر کامران صحت متولد 24/03/1353 در شهر تهران می باشد. ایشان دارای مدرک لیسانس مترجمی زبان انگلیسی از دانشگاه آزاد اسلامی واحد تهران مرکز و مدرک MBA گرایش بازاریابی و مدرک DBA گرایش بازاریابی از لندن می باشند.</p>
-                    <ul class="speaker-socials">
-                        <li><a href="#"><span class="fa fa-facebook-official"></span></a></li>
-                        <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                        <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
-                    </ul>
+            <center>
+                <div class="col-sm-12">
+                    <div class="speaker">
+                        <div class="photo-wrapper rounded"><img src="assets/img/speakers/speaker3.jpg" alt="دکتر کامران صحت" class="img-responsive"></div>
+                        <h3 class="name">دکتر کامران صحت</h3>
+                        <p class="text-alt"><small>مدرس و مشاور برترین برندهای داخلی و بین المللی</small></p>
+                        <p class="about">دکتر کامران صحت متولد 24/03/1353 در شهر تهران می باشد. ایشان دارای مدرک لیسانس مترجمی زبان انگلیسی از دانشگاه آزاد اسلامی واحد تهران مرکز و مدرک MBA گرایش بازاریابی و مدرک DBA گرایش بازاریابی از لندن می باشند.</p>
+                        <ul class="speaker-socials">
+                            <li><a href="#"><span class="fa fa-facebook-official"></span></a></li>
+                            <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                            <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
+            </center>
         </div>
     </section>
     <div class="container">
@@ -399,47 +401,48 @@
             <h3>عوامل برگزار کننده</h3>
         </center>
         <div class="col-sm-4">
-            <div class="speaker">
-                <div class="photo-wrapper rounded"><img src="assets/img/speakers/speaker4.jpg" alt="John Doe" class="img-responsive"></div>
-                <h3 class="name">MARTIN BRANSON</h3>
-                <p class="text-alt"><small>Evangelist  Doogle</small></p>
-                <p class="about">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                <ul class="speaker-socials">
-                    <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                    <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                    <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="col-sm-4">
-            <div class="speaker">
-                <div class="photo-wrapper rounded"><img src="assets/img/speakers/speaker5.jpg" alt="John Doe" class="img-responsive"></div>
-                <h3 class="name">AMY WARNER</h3>
-                <p class="text-alt"><small>Graphic Designer</small></p>
-                <p class="about">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                <ul class="speaker-socials">
-                    <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                    <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                    <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="col-sm-4">
-            <div class="speaker">
-                <div class="photo-wrapper rounded"><img src="assets/img/speakers/speaker6.jpg" alt="John Doe" class="img-responsive"></div>
-                <h3 class="name">ALEC KROSOVIC</h3>
-                <p class="text-alt"><small>Project Manager</small></p>
-                <p class="about">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                <ul class="speaker-socials">
-                    <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                    <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                    <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
-                </ul>
-            </div>
+            <!--<div class="speaker">
+            <div class="photo-wrapper rounded"><img src="assets/img/speakers/speaker4.jpg" alt="John Doe" class="img-responsive"></div>
+            <h3 class="name">MARTIN BRANSON</h3>
+            <p class="text-alt"><small>Evangelist  Doogle</small></p>
+            <p class="about">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+            <ul class="speaker-socials">
+                <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
+            </ul>
         </div>
     </div>
+
+    <div class="col-sm-4">
+        <div class="speaker">
+            <div class="photo-wrapper rounded"><img src="assets/img/speakers/speaker5.jpg" alt="John Doe" class="img-responsive"></div>
+            <h3 class="name">AMY WARNER</h3>
+            <p class="text-alt"><small>Graphic Designer</small></p>
+            <p class="about">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+            <ul class="speaker-socials">
+                <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="col-sm-4">
+        <div class="speaker">
+            <div class="photo-wrapper rounded"><img src="assets/img/speakers/speaker6.jpg" alt="John Doe" class="img-responsive"></div>
+            <h3 class="name">ALEC KROSOVIC</h3>
+            <p class="text-alt"><small>Project Manager</small></p>
+            <p class="about">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+            <ul class="speaker-socials">
+                <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
+            </ul>
+        </div>
+    </div>
+            -->
+        </div>
     <section id="schedule" class="section schedule-section align-center">
         <div class="container">
             <span class="icon section-icon icon-office-21"></span>
@@ -879,42 +882,42 @@
             <p class="text-alt">شرکت هایی که از ما حمایت می کنند</p>
             <br>
             <br>
+            <!--
+                <div class="sponsors">
+                    <div class="sponsor big"><img src="assets/img/sponsors/sponsor-big-1.png" alt=""></div>
+                    <div class="sponsor big"><img src="assets/img/sponsors/sponsor-big-2.png" alt=""></div>
+                    <div class="sponsor big"><img src="assets/img/sponsors/sponsor-big-3.png" alt=""></div>
+                    <div class="sponsor big"><img src="assets/img/sponsors/sponsor-big-4.png" alt=""></div>
+                </div>
 
-            <div class="sponsors">
-                <div class="sponsor big"><img src="assets/img/sponsors/sponsor-big-1.png" alt=""></div>
-                <div class="sponsor big"><img src="assets/img/sponsors/sponsor-big-2.png" alt=""></div>
-                <div class="sponsor big"><img src="assets/img/sponsors/sponsor-big-3.png" alt=""></div>
-                <div class="sponsor big"><img src="assets/img/sponsors/sponsor-big-4.png" alt=""></div>
-            </div>
+                <div class="sponsors">
+                    <div class="sponsor inline"><img src="assets/img/sponsors/sponsor1.png" alt=""></div>
+                    <div class="sponsor inline"><img src="assets/img/sponsors/sponsor2.png" alt=""></div>
+                    <div class="sponsor inline"><img src="assets/img/sponsors/sponsor3.png" alt=""></div>
+                    <div class="sponsor inline"><img src="assets/img/sponsors/sponsor4.png" alt=""></div>
+                    <div class="sponsor inline"><img src="assets/img/sponsors/sponsor5.png" alt=""></div>
+                    <div class="sponsor inline"><img src="assets/img/sponsors/sponsor6.png" alt=""></div>
+                </div>
+                <div class="sponsors">
+                    <div class="sponsor inline"><img src="assets/img/sponsors/sponsor9.png" alt=""></div>
+                    <div class="sponsor inline"><img src="assets/img/sponsors/sponsor10.png" alt=""></div>
+                    <div class="sponsor inline"><img src="assets/img/sponsors/sponsor1.png" alt=""></div>
+                    <div class="sponsor inline"><img src="assets/img/sponsors/sponsor2.png" alt=""></div>
+                    <div class="sponsor inline"><img src="assets/img/sponsors/sponsor3.png" alt=""></div>
+                    <div class="sponsor inline"><img src="assets/img/sponsors/sponsor4.png" alt=""></div>
+                </div>
+                <div class="sponsors">
+                    <div class="sponsor inline"><img src="assets/img/sponsors/sponsor5.png" alt=""></div>
+                    <div class="sponsor inline"><img src="assets/img/sponsors/sponsor6.png" alt=""></div>
+                    <div class="sponsor inline"><img src="assets/img/sponsors/sponsor7.png" alt=""></div>
+                    <div class="sponsor inline"><img src="assets/img/sponsors/sponsor3.png" alt=""></div>
+                </div>
 
-            <div class="sponsors">
-                <div class="sponsor inline"><img src="assets/img/sponsors/sponsor1.png" alt=""></div>
-                <div class="sponsor inline"><img src="assets/img/sponsors/sponsor2.png" alt=""></div>
-                <div class="sponsor inline"><img src="assets/img/sponsors/sponsor3.png" alt=""></div>
-                <div class="sponsor inline"><img src="assets/img/sponsors/sponsor4.png" alt=""></div>
-                <div class="sponsor inline"><img src="assets/img/sponsors/sponsor5.png" alt=""></div>
-                <div class="sponsor inline"><img src="assets/img/sponsors/sponsor6.png" alt=""></div>
-            </div>
-            <div class="sponsors">
-                <div class="sponsor inline"><img src="assets/img/sponsors/sponsor9.png" alt=""></div>
-                <div class="sponsor inline"><img src="assets/img/sponsors/sponsor10.png" alt=""></div>
-                <div class="sponsor inline"><img src="assets/img/sponsors/sponsor1.png" alt=""></div>
-                <div class="sponsor inline"><img src="assets/img/sponsors/sponsor2.png" alt=""></div>
-                <div class="sponsor inline"><img src="assets/img/sponsors/sponsor3.png" alt=""></div>
-                <div class="sponsor inline"><img src="assets/img/sponsors/sponsor4.png" alt=""></div>
-            </div>
-            <div class="sponsors">
-                <div class="sponsor inline"><img src="assets/img/sponsors/sponsor5.png" alt=""></div>
-                <div class="sponsor inline"><img src="assets/img/sponsors/sponsor6.png" alt=""></div>
-                <div class="sponsor inline"><img src="assets/img/sponsors/sponsor7.png" alt=""></div>
-                <div class="sponsor inline"><img src="assets/img/sponsors/sponsor3.png" alt=""></div>
-            </div>
-
-            <div class="sponsors">
-                <div class="sponsor inline"><img src="assets/img/sponsors/sponsor2.png" alt=""></div>
-                <div class="sponsor inline"><img src="assets/img/sponsors/sponsor1.png" alt=""></div>
-            </div>
-
+                <div class="sponsors">
+                    <div class="sponsor inline"><img src="assets/img/sponsors/sponsor2.png" alt=""></div>
+                    <div class="sponsor inline"><img src="assets/img/sponsors/sponsor1.png" alt=""></div>
+                </div>
+    -->
         </div>
     </section>
 
@@ -942,8 +945,10 @@
 
             <div class="col-md-4">
                 <div class="widget about-widget">
-                    <h6 class="widget-head">پیام مدیر عامل <span class="highlight">هلدینگ نگاه</span></h6>
-                    <p class="text-alt"><small>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type.</small></p>
+                    <h6 class="widget-head" dir="rtl">پیام مدیر عامل <span class="highlight">هلدینگ نگاه</span></h6>
+                    <p class="text-alt"><small dir="rtl">
+    اینجانب فهیمه رضوان پناه، به همراه مجموعه ای پویا و خلاق تلاش دارم با نگاهی متفاوت، بستری برای آموزش و رقابت برابر برای تمام فعالیتهای بزرگ و کوچک فراهم آورم. بنده در مسیر خود کاملاً راسخ هستم و به تمام همراهان عزیزم با تمام وجود کمک خواهم کرد.
+</small></p>
 
                     <img src="assets/img/autograph-143x105.png" alt="autograph">
                 </div>
@@ -1108,8 +1113,6 @@
 
         </div>
     </div>
-
-
 
 
 
